--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.KaoQinListActivity"></activity>
+        <activity android:name=".activity.KaoQinActivity" />
+        <activity android:name=".activity.InputActivity" />
+        <activity android:name=".activity.RegisterAndRecognizeActivity" />
+        <activity android:name=".activity.LoginActivity" />
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTop">
@@ -28,16 +32,6 @@
         <activity
             android:name=".activity.SingleImageActivity"
             android:launchMode="singleTop" />
-
-<!--        <provider-->
-<!--            android:name="android.support.v4.content.FileProvider"-->
-<!--            android:authorities="${applicationId}.provider"-->
-<!--            android:exported="false"-->
-<!--            android:grantUriPermissions="true">-->
-<!--            <meta-data-->
-<!--                android:name="android.support.FILE_PROVIDER_PATHS"-->
-<!--                android:resource="@xml/provider_paths" />-->
-<!--        </provider>-->
     </application>
 
 </manifest>
