--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.KaoQinListActivity"></activity>
+        <activity android:name=".activity.CheckActivity"></activity>
+        <activity android:name=".activity.KaoQinListActivity" />
         <activity android:name=".activity.KaoQinActivity" />
         <activity android:name=".activity.InputActivity" />
         <activity android:name=".activity.RegisterAndRecognizeActivity" />
