--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         <activity android:name=".activity.KaoQinActivity" />
         <activity android:name=".activity.InputActivity" />
         <activity android:name=".activity.RegisterAndRecognizeActivity" />
-        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.LoginActivity" >
+
+        </activity>
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTop">
